# WentuZ

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/styling/: main.css
src/: main.rs
src/components/: footer.rs  mod.rs
src/views/: home.rs
ui/: app-window.slint
