[package]
name = "wentu"
version = "0.0.1-alpha1"
authors = ["JellyTyan <lycomilopster@gmail.com>"]
edition = "2021"

[dependencies]
WentuZ-Backend = { git = "https://github.com/NullPointerGang/WantuZ-Backend", branch = "main" }
dioxus = { version = "0.6.1", features = ["router"] }
dioxus-desktop = "0.6.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
